updated comment details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="container">
         <img src="./img/Freddie.png" alt="excited man" class="main-image">
         <h1>We are the Champions</h1>
-        <input type="text" name="input-text" id="main-input" placeholder="Write your Endorsements here">
+        <div class="input-container">
+            <input type="text" name="input-text" id="main-input" placeholder="Write your Endorsements here">
+            <input type="text" id="from-input" placeholder="from">
+            <input type="text" id="to-input" placeholder="to">
+        </div>
         <button id="publish-button">Publish</button>
         <h2>- Endorsements - </h2>
         <ul id="unorderlist">
